test/extended/testdata/oauthserver/oauth-server.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: test-oauth-server
  name: test-oauth-server
spec:
  containers:
  - command:
    - hypershift
    - openshift-osinserver
    - --config=/var/config/system/configmaps/oauth-config/oauth.conf
    - --v=100
    image: quay.io/openshift/origin-hypershift:latest
    imagePullPolicy: IfNotPresent
    name: oauth-server
    ports:
    - containerPort: 6443
      name: https
      protocol: TCP
    resources:
      requests:
        cpu: 10m
        memory: 50Mi
    securityContext:
      capabilities:
        drop:
        - MKNOD
      procMount: Default
    volumeMounts:
    - mountPath: /var/config/system/secrets/session
      name: session
      readOnly: true
    - mountPath: /var/config/system/configmaps/oauth-config
      name: oauth-config
      readOnly: true
    - mountPath: /var/config/system/secrets/serving-cert
      name: serving-cert
      readOnly: true
    - mountPath: /var/config/system/configmaps/service-ca
      name: service-ca
      readOnly: true
  serviceAccountName: e2e-oauth
  volumes:
  - configMap:
      defaultMode: 420
      items:
      - key: oauth.conf
        path: oauth.conf
      name: oauth-config
    name: oauth-config
  - name: session
    secret:
      defaultMode: 420
      items:
      - key: session
        path: session
      secretName: session
  - name: serving-cert
    secret:
      defaultMode: 420
      items:
      - key: tls.crt
        path: tls.crt
      - key: tls.key
        path: tls.key
      secretName: serving-cert
  - configMap:
      defaultMode: 420
      items:
      - key: service-ca.crt
        path: service-ca.crt
      name: service-ca
    name: service-ca
---

apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: serving-cert
  labels:
    app: test-oauth-server
  name: test-oauth-svc
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 6443
  selector:
    app: test-oauth-server
  type: ClusterIP
  serviceAffinitiy: None
---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: test-oauth-server
  name: test-oauth-route
spec:
  port:
    targetPort: 6443
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: passthrough
  to:
    kind: Service
    name: test-oauth-svc
    weight: 100
  wildcardPolicy: None
